Overhauled audio and subtitle selection. Allows specifying multiple languages and more flexibility in setting the default subtitle.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -19,6 +19,8 @@
 		<converters:PercentDisplayConverter x:Key="PercentDisplayConverter" />
 		<converters:DoubleDisplayConverter x:Key="DoubleDisplayConverter" />
 		<converters:TitleDisplayConverter x:Key="TitleDisplayConverter" />
+		<converters:BoolRadioConverter x:Key="BoolRadioConverter" />
+		<converters:BoolRadioConverter x:Key="InverseBoolRadioConverter" Inverse="True" />
 
 		<vidCoder:WindowXamlHelper x:Key="WindowXamlHelper" />
 
