--- a/VidCoder/View/Panels/AudioPanel.xaml
+++ b/VidCoder/View/Panels/AudioPanel.xaml
@@ -1,135 +1,160 @@
 ﻿<UserControl
-    x:Class="VidCoder.View.AudioPanel"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:VidCoder.Controls"
-    xmlns:converters="clr-namespace:VidCoder.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:panels="clr-namespace:VidCoder.View.Panels"
-    xmlns:prop="clr-namespace:VidCoder.Properties"
-    xmlns:res="clr-namespace:VidCoder.Resources"
-    d:DesignHeight="300"
-    d:DesignWidth="800"
-    mc:Ignorable="d">
-    <UserControl.Resources>
-        <Style x:Key="AudioOutputPreview" TargetType="TextBlock">
-            <Setter Property="Margin" Value="9 0 9 2" />
-        </Style>
-    </UserControl.Resources>
-    <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-            <StackPanel
-                Name="audioPanelStack"
-                VerticalAlignment="Top"
-                Orientation="Vertical">
-                <ItemsControl HorizontalAlignment="Stretch" ItemsSource="{Binding AudioEncodings}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <panels:AudioEncodingPanel />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.Template>
-                        <ControlTemplate>
-                            <ScrollViewer
-                                Margin="0"
-                                Focusable="False"
-                                HorizontalScrollBarVisibility="Disabled"
-                                VerticalScrollBarVisibility="Auto">
-                                <StackPanel IsItemsHost="True" Orientation="Vertical" />
-                            </ScrollViewer>
-                        </ControlTemplate>
-                    </ItemsControl.Template>
-                </ItemsControl>
+	x:Class="VidCoder.View.AudioPanel"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:converters="clr-namespace:VidCoder.Converters"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:panels="clr-namespace:VidCoder.View.Panels"
+	xmlns:prop="clr-namespace:VidCoder.Properties"
+	xmlns:res="clr-namespace:VidCoder.Resources"
+	d:DesignHeight="300"
+	d:DesignWidth="800"
+	mc:Ignorable="d">
+	<UserControl.Resources>
+		<Style x:Key="AudioOutputPreview" TargetType="TextBlock">
+			<Setter Property="Margin" Value="9 0 9 2" />
+		</Style>
+	</UserControl.Resources>
+	<Grid>
+		<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+			<StackPanel
+				Name="audioPanelStack"
+				VerticalAlignment="Top"
+				Orientation="Vertical">
+				<ItemsControl HorizontalAlignment="Stretch" ItemsSource="{Binding AudioEncodings}">
+					<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<panels:AudioEncodingPanel />
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>
+					<ItemsControl.Template>
+						<ControlTemplate>
+							<ScrollViewer
+								Margin="0"
+								Focusable="False"
+								HorizontalScrollBarVisibility="Disabled"
+								VerticalScrollBarVisibility="Auto">
+								<StackPanel IsItemsHost="True" Orientation="Vertical" />
+							</ScrollViewer>
+						</ControlTemplate>
+					</ItemsControl.Template>
+				</ItemsControl>
 
-                <Button
-                    Margin="3 6 0 0"
-                    HorizontalAlignment="Left"
-                    Command="{Binding AddAudioEncoding}">
-                    <StackPanel Margin="2" Orientation="Horizontal">
-                        <Polygon Style="{StaticResource PlusSign}" />
-                        <TextBlock Text="{x:Static res:EncodingRes.AddAudioEncodingButton}" />
-                    </StackPanel>
-                </Button>
+				<Button
+					Margin="3 6 0 0"
+					HorizontalAlignment="Left"
+					Command="{Binding AddAudioEncoding}">
+					<StackPanel Margin="2" Orientation="Horizontal">
+						<Polygon Style="{StaticResource PlusSign}" />
+						<TextBlock Text="{x:Static res:EncodingRes.AddAudioEncodingButton}" />
+					</StackPanel>
+				</Button>
 
-                <Grid
-                    Margin="3 10 0 0"
-                    HorizontalAlignment="Left"
-                    Visibility="{Binding HasSourceData,
-                                         Converter={StaticResource VisibilityConverter}}">
-                    <Border
-                        Margin="0 0 0 0"
-                        Background="{StaticResource OutputBrush}"
-                        Effect="{StaticResource InfoBoxShadow}"
-                        Style="{StaticResource InputOutputInfoSection}">
-                        <Grid Margin="2">
-                            <TextBlock
-                                Margin="2 0 0 0"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Top"
-                                Style="{StaticResource SectionHeader}"
-                                Text="{x:Static res:EncodingRes.OutputLabel}" />
-                            <StackPanel Margin="0 20 0 0" Orientation="Vertical">
-                                <TextBlock
-                                    Style="{StaticResource DescriptiveText}"
-                                    Text="{x:Static res:EncodingRes.NoTracksPlaceholder}"
-                                    Visibility="{Binding HasAudioTracks,
-                                                         Converter={StaticResource InverseVisibilityConverter}}" />
-                                <ItemsControl
-                                    Grid.IsSharedSizeScope="True"
-                                    ItemsSource="{Binding AudioOutputPreviews}"
-                                    Visibility="{Binding HasAudioTracks,
-                                                         Converter={StaticResource VisibilityConverter}}">
-                                    <ItemsControl.ItemTemplate>
-                                        <DataTemplate>
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="TrackNumber" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="TrackName" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="Encoder" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="Mixdown" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="SampleRate" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="Quality" />
-                                                    <ColumnDefinition Width="*" SharedSizeGroup="Modifiers" />
-                                                </Grid.ColumnDefinitions>
+				<StackPanel
+					Margin="7 10 0 0"
+					Orientation="Vertical"
+					Visibility="{Binding AutoPassthroughSettingsVisible,
+					                     Converter={StaticResource VisibilityConverter}}">
+					<TextBlock Style="{StaticResource SectionHeader}" Text="{x:Static res:EncodingRes.PassthroughSettingsLabel}" />
 
-                                                <TextBlock
-                                                    Grid.Column="0"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding TrackNumber}" />
-                                                <TextBlock
-                                                    Grid.Column="1"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding Name}" />
-                                                <TextBlock
-                                                    Grid.Column="2"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding Encoder}" />
-                                                <TextBlock
-                                                    Grid.Column="3"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding Mixdown}" />
-                                                <TextBlock
-                                                    Grid.Column="4"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding SampleRate}" />
-                                                <TextBlock
-                                                    Grid.Column="5"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding Quality}" />
-                                                <TextBlock
-                                                    Grid.Column="6"
-                                                    Style="{StaticResource AudioOutputPreview}"
-                                                    Text="{Binding Modifiers}" />
-                                            </Grid>
-                                        </DataTemplate>
-                                    </ItemsControl.ItemTemplate>
-                                </ItemsControl>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                </Grid>
-            </StackPanel>
-        </ScrollViewer>
-    </Grid>
+					<StackPanel Margin="20 4 0 0" Orientation="Horizontal">
+						<TextBlock Text="{x:Static res:EncodingRes.AutoPassthroughFallbackLabel}" ToolTipService.ShowDuration="20000" VerticalAlignment="Center" Margin="0 0 6 0">
+							<TextBlock.ToolTip>
+								<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.AutoPassthroughFallbackToolTip}" />
+							</TextBlock.ToolTip>
+						</TextBlock>
+						<ComboBox
+							MinWidth="110"
+							ItemsSource="{Binding FallbackEncoderChoices}"
+							SelectedItem="{Binding AudioEncoderFallback}"
+							ToolTipService.ShowDuration="20000">
+							<ComboBox.ToolTip>
+								<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.AutoPassthroughFallbackToolTip}" />
+							</ComboBox.ToolTip>
+						</ComboBox>
+					</StackPanel>
+				</StackPanel>
+
+				<Grid
+					Margin="3 10 0 0"
+					HorizontalAlignment="Left"
+					Visibility="{Binding HasSourceData,
+					                     Converter={StaticResource VisibilityConverter}}">
+					<Border
+						Margin="0 0 0 0"
+						Background="{StaticResource OutputBrush}"
+						Effect="{StaticResource InfoBoxShadow}"
+						Style="{StaticResource InputOutputInfoSection}">
+						<Grid Margin="2">
+							<TextBlock
+								Margin="2 0 0 0"
+								HorizontalAlignment="Left"
+								VerticalAlignment="Top"
+								Style="{StaticResource SectionHeader}"
+								Text="{x:Static res:EncodingRes.OutputLabel}" />
+							<StackPanel Margin="0 20 0 0" Orientation="Vertical">
+								<TextBlock
+									Style="{StaticResource DescriptiveText}"
+									Text="{x:Static res:EncodingRes.NoTracksPlaceholder}"
+									Visibility="{Binding HasAudioTracks,
+									                     Converter={StaticResource InverseVisibilityConverter}}" />
+								<ItemsControl
+									Grid.IsSharedSizeScope="True"
+									ItemsSource="{Binding AudioOutputPreviews}"
+									Visibility="{Binding HasAudioTracks,
+									                     Converter={StaticResource VisibilityConverter}}">
+									<ItemsControl.ItemTemplate>
+										<DataTemplate>
+											<Grid>
+												<Grid.ColumnDefinitions>
+													<ColumnDefinition Width="*" SharedSizeGroup="TrackNumber" />
+													<ColumnDefinition Width="*" SharedSizeGroup="TrackName" />
+													<ColumnDefinition Width="*" SharedSizeGroup="Encoder" />
+													<ColumnDefinition Width="*" SharedSizeGroup="Mixdown" />
+													<ColumnDefinition Width="*" SharedSizeGroup="SampleRate" />
+													<ColumnDefinition Width="*" SharedSizeGroup="Quality" />
+													<ColumnDefinition Width="*" SharedSizeGroup="Modifiers" />
+												</Grid.ColumnDefinitions>
+
+												<TextBlock
+													Grid.Column="0"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding TrackNumber}" />
+												<TextBlock
+													Grid.Column="1"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding Name}" />
+												<TextBlock
+													Grid.Column="2"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding Encoder}" />
+												<TextBlock
+													Grid.Column="3"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding Mixdown}" />
+												<TextBlock
+													Grid.Column="4"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding SampleRate}" />
+												<TextBlock
+													Grid.Column="5"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding Quality}" />
+												<TextBlock
+													Grid.Column="6"
+													Style="{StaticResource AudioOutputPreview}"
+													Text="{Binding Modifiers}" />
+											</Grid>
+										</DataTemplate>
+									</ItemsControl.ItemTemplate>
+								</ItemsControl>
+							</StackPanel>
+						</Grid>
+					</Border>
+				</Grid>
+			</StackPanel>
+		</ScrollViewer>
+	</Grid>
 </UserControl>
