--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -75,7 +75,7 @@
 				VerticalAlignment="Top"
 				UseLayoutRounding="True"
 				Visibility="{Binding PickersService.SelectedPicker.Picker.IsNone,
-				                     Converter={StaticResource InverseVisibilityConverter}}">
+									 Converter={StaticResource InverseVisibilityConverter}}">
 				<ToolBar Loaded="ToolBar_Loaded" ToolBarTray.IsLocked="True">
 					<ToolBar.Background>
 						<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -115,7 +115,7 @@
 						Command="{Binding Delete}"
 						Padding="5 0"
 						Visibility="{Binding PickersService.SelectedPicker.Picker.IsModified,
-						                     Converter={StaticResource VisibilityConverter}}">
+											 Converter={StaticResource VisibilityConverter}}">
 						<StackPanel Orientation="Horizontal">
 							<Image
 								Width="16"
@@ -130,7 +130,7 @@
 						Command="{Binding Delete}"
 						Padding="5 0"
 						Visibility="{Binding DeleteButtonVisible,
-						                     Converter={StaticResource VisibilityConverter}}">
+											 Converter={StaticResource VisibilityConverter}}">
 						<StackPanel Orientation="Horizontal">
 							<Grid Background="Transparent">
 								<Rectangle
@@ -160,7 +160,7 @@
 				Grid.Row="1"
 				Background="{StaticResource DismissableMessageBrush}"
 				Visibility="{Binding ShowHelpMessage,
-				                     Converter={StaticResource VisibilityConverter}}">
+									 Converter={StaticResource VisibilityConverter}}">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
 					<ColumnDefinition Width="Auto" />
@@ -206,8 +206,8 @@
 								VerticalContentAlignment="Center"
 								IsEnabled="{Binding OutputDirectoryOverrideEnabled}"
 								Text="{Binding OutputDirectoryOverride,
-								               Mode=TwoWay,
-								               UpdateSourceTrigger=PropertyChanged}" />
+											   Mode=TwoWay,
+											   UpdateSourceTrigger=PropertyChanged}" />
 
 							<Button
 								Grid.Column="2"
@@ -238,7 +238,9 @@
 								VerticalAlignment="Center"
 								VerticalContentAlignment="Center"
 								IsEnabled="{Binding NameFormatOverrideEnabled}"
-								Text="{Binding NameFormatOverride}" />
+								Text="{Binding NameFormatOverride,
+											   Mode=TwoWay,
+											   UpdateSourceTrigger=PropertyChanged}" />
 						</Grid>
 						<CheckBox
 							Height="16"
@@ -300,7 +302,7 @@
 									IsEnabled="{Binding TitleRangeSelectEnabled}"
 									Minimum="0"
 									Number="{Binding TitleRangeSelectStartMinutes,
-									                 Mode=TwoWay}" />
+													 Mode=TwoWay}" />
 								<TextBlock
 									Margin="4 0 4 0"
 									VerticalAlignment="Center"
@@ -311,7 +313,7 @@
 									IsEnabled="{Binding TitleRangeSelectEnabled}"
 									Minimum="0"
 									Number="{Binding TitleRangeSelectEndMinutes,
-									                 Mode=TwoWay}" />
+													 Mode=TwoWay}" />
 								<TextBlock
 									Margin="4 0 0 0"
 									VerticalAlignment="Center"
@@ -329,8 +331,8 @@
 							Content="{x:Static res:CommonRes.Disabled}"
 							GroupName="autoAudio1"
 							IsChecked="{Binding AudioSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:AudioSelectionMode.Disabled}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:AudioSelectionMode.Disabled}}"
 							ToolTip="{x:Static res:OptionsRes.AutoAudioDisabledToolTip}" />
 						<RadioButton
 							Margin="0 6 0 0"
@@ -339,8 +341,8 @@
 							Content="{x:Static res:CommonRes.First}"
 							GroupName="autoAudio2"
 							IsChecked="{Binding AudioSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:AudioSelectionMode.First}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:AudioSelectionMode.First}}"
 							ToolTip="{x:Static res:PickerRes.AudioFirstToolTip}" />
 						<StackPanel
 							Margin="0 6 0 0"
@@ -353,14 +355,14 @@
 								Content="{x:Static res:PickerRes.LanguagesRadioButton}"
 								GroupName="autoAudio3"
 								IsChecked="{Binding AudioSelectionMode,
-								                    Converter={StaticResource EnumBoolConverter},
-								                    ConverterParameter={x:Static model:AudioSelectionMode.Language}}" />
+													Converter={StaticResource EnumBoolConverter},
+													ConverterParameter={x:Static model:AudioSelectionMode.Language}}" />
 							<StackPanel
 								Margin="0 -3 0 0"
 								Orientation="Horizontal"
 								Visibility="{Binding AudioSelectionMode,
-								                     Converter={StaticResource EnumVisibilityConverter},
-								                     ConverterParameter={x:Static model:AudioSelectionMode.Language}}">
+													 Converter={StaticResource EnumVisibilityConverter},
+													 ConverterParameter={x:Static model:AudioSelectionMode.Language}}">
 								<ItemsControl
 									Margin="10 0 0 0"
 									HorizontalAlignment="Left"
@@ -381,7 +383,7 @@
 													Content="{x:Static res:PickerRes.RemoveLanguageToolTip}"
 													Style="{StaticResource RemoveButtonStyle}"
 													Visibility="{Binding PickerWindowViewModel.HasMultipleAudioLanguages,
-													                     Converter={StaticResource VisibilityConverter}}" />
+																		 Converter={StaticResource VisibilityConverter}}" />
 											</StackPanel>
 										</DataTemplate>
 									</ItemsControl.ItemTemplate>
@@ -408,14 +410,14 @@
 								Content="{Binding AudioFirstTrackLabel}"
 								GroupName="autoAudioLanguage1"
 								IsChecked="{Binding AudioLanguageAll,
-								                    Converter={StaticResource InverseBoolRadioConverter}}" />
+													Converter={StaticResource InverseBoolRadioConverter}}" />
 
 							<RadioButton
 								Margin="0 6 0 0"
 								Content="{Binding AudioAllTracksLabel}"
 								GroupName="autoAudioLanguage2"
 								IsChecked="{Binding AudioLanguageAll,
-								                    Converter={StaticResource BoolRadioConverter}}" />
+													Converter={StaticResource BoolRadioConverter}}" />
 						</StackPanel>
 
 						<RadioButton
@@ -425,16 +427,16 @@
 							Content="{x:Static res:CommonRes.All}"
 							GroupName="autoAudio4"
 							IsChecked="{Binding AudioSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:AudioSelectionMode.All}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:AudioSelectionMode.All}}"
 							ToolTip="{x:Static res:PickerRes.AudioAllToolTip}" />
 
 						<StackPanel
 							Margin="20 4 0 0"
 							Orientation="Horizontal"
 							Visibility="{Binding AudioSelectionMode,
-							                     Converter={StaticResource EnumVisibilityConverter},
-							                     ConverterParameter={x:Static model:AudioSelectionMode.All}}">
+												 Converter={StaticResource EnumVisibilityConverter},
+												 ConverterParameter={x:Static model:AudioSelectionMode.All}}">
 							<TextBlock
 								Margin="0 2 0 0"
 								VerticalAlignment="Top"
@@ -445,7 +447,7 @@
 								Style="{StaticResource DescriptiveText}"
 								Text="{x:Static res:MainRes.NoneParen}"
 								Visibility="{Binding HasNoAudioLanguages,
-								                     Converter={StaticResource VisibilityConverter}}" />
+													 Converter={StaticResource VisibilityConverter}}" />
 
 							<ItemsControl
 								Margin="10 0 0 0"
@@ -495,8 +497,8 @@
 							Content="{x:Static res:CommonRes.Disabled}"
 							GroupName="autoSubtitle1"
 							IsChecked="{Binding SubtitleSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:SubtitleSelectionMode.Disabled}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:SubtitleSelectionMode.Disabled}}"
 							ToolTip="{x:Static res:OptionsRes.AutoSubtitleDisabledToolTip}" />
 						<RadioButton
 							Margin="0 6 0 0"
@@ -505,8 +507,8 @@
 							Content="{x:Static res:CommonRes.None}"
 							GroupName="autoSubtitle2"
 							IsChecked="{Binding SubtitleSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:SubtitleSelectionMode.None}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:SubtitleSelectionMode.None}}"
 							ToolTip="{x:Static res:PickerRes.SubtitleNoneToolTip}" />
 						<RadioButton
 							Margin="0 6 0 0"
@@ -515,8 +517,8 @@
 							Content="{x:Static res:CommonRes.First}"
 							GroupName="autoSubtitle2"
 							IsChecked="{Binding SubtitleSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:SubtitleSelectionMode.First}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:SubtitleSelectionMode.First}}"
 							ToolTip="{x:Static res:PickerRes.SubtitleFirstToolTip}" />
 						<RadioButton
 							Margin="0 6 0 0"
@@ -525,8 +527,8 @@
 							Content="{x:Static res:PickerRes.ForeignAudioSearchRadioButton}"
 							GroupName="autoSubtitle3"
 							IsChecked="{Binding SubtitleSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:SubtitleSelectionMode.ForeignAudioSearch}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:SubtitleSelectionMode.ForeignAudioSearch}}"
 							ToolTip="{x:Static res:CommonRes.ForeignAudioSearchToolTip}" />
 
 						<StackPanel
@@ -540,14 +542,14 @@
 								Content="{x:Static res:PickerRes.LanguagesRadioButton}"
 								GroupName="autoSubtitle4"
 								IsChecked="{Binding SubtitleSelectionMode,
-								                    Converter={StaticResource EnumBoolConverter},
-								                    ConverterParameter={x:Static model:SubtitleSelectionMode.Language}}" />
+													Converter={StaticResource EnumBoolConverter},
+													ConverterParameter={x:Static model:SubtitleSelectionMode.Language}}" />
 							<StackPanel
 								Margin="0 -3 0 0"
 								Orientation="Horizontal"
 								Visibility="{Binding SubtitleSelectionMode,
-								                     Converter={StaticResource EnumVisibilityConverter},
-								                     ConverterParameter={x:Static model:SubtitleSelectionMode.Language}}">
+													 Converter={StaticResource EnumVisibilityConverter},
+													 ConverterParameter={x:Static model:SubtitleSelectionMode.Language}}">
 
 								<ItemsControl
 									Margin="10 0 0 0"
@@ -569,7 +571,7 @@
 													Content="{x:Static res:PickerRes.RemoveLanguageToolTip}"
 													Style="{StaticResource RemoveButtonStyle}"
 													Visibility="{Binding PickerWindowViewModel.HasMultipleSubtitleLanguages,
-													                     Converter={StaticResource VisibilityConverter}}" />
+																		 Converter={StaticResource VisibilityConverter}}" />
 											</StackPanel>
 										</DataTemplate>
 									</ItemsControl.ItemTemplate>
@@ -602,13 +604,13 @@
 								Content="{Binding SubtitleFirstTrackLabel}"
 								GroupName="autoSubtitleLanguage1"
 								IsChecked="{Binding SubtitleLanguageAll,
-								                    Converter={StaticResource InverseBoolRadioConverter}}" />
+													Converter={StaticResource InverseBoolRadioConverter}}" />
 							<RadioButton
 								Margin="0 6 0 0"
 								Content="{Binding SubtitleAllTracksLabel}"
 								GroupName="autoSubtitleLanguage2"
 								IsChecked="{Binding SubtitleLanguageAll,
-								                    Converter={StaticResource BoolRadioConverter}}" />
+													Converter={StaticResource BoolRadioConverter}}" />
 						</StackPanel>
 
 						<RadioButton
@@ -616,16 +618,16 @@
 							Content="{x:Static res:CommonRes.All}"
 							GroupName="autoSubtitle5"
 							IsChecked="{Binding SubtitleSelectionMode,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:SubtitleSelectionMode.All}}"
+												Converter={StaticResource EnumBoolConverter},
+												ConverterParameter={x:Static model:SubtitleSelectionMode.All}}"
 							ToolTip="{x:Static res:PickerRes.AllSubtitlesToolTip}" />
 
 						<StackPanel
 							Margin="20 4 0 0"
 							Orientation="Horizontal"
 							Visibility="{Binding SubtitleSelectionMode,
-							                     Converter={StaticResource EnumVisibilityConverter},
-							                     ConverterParameter={x:Static model:SubtitleSelectionMode.All}}">
+												 Converter={StaticResource EnumVisibilityConverter},
+												 ConverterParameter={x:Static model:SubtitleSelectionMode.All}}">
 							<TextBlock
 								Margin="0 2 0 0"
 								VerticalAlignment="Top"
@@ -636,7 +638,7 @@
 								Style="{StaticResource DescriptiveText}"
 								Text="{x:Static res:MainRes.NoneParen}"
 								Visibility="{Binding HasNoSubtitleLanguages,
-								                     Converter={StaticResource VisibilityConverter}}" />
+													 Converter={StaticResource VisibilityConverter}}" />
 
 							<ItemsControl
 								Margin="10 0 0 0"
@@ -695,8 +697,8 @@
 							IsChecked="{Binding SubtitleDefault}"
 							ToolTip="{x:Static res:PickerRes.MultipleSubtitleDefaultToolTip}"
 							Visibility="{Binding SubtitleModChoices,
-							                     Converter={StaticResource EnumVisibilityConverter},
-							                     ConverterParameter={x:Static viewModel:SubtitleModifierChoices.Multiple}}" />
+												 Converter={StaticResource EnumVisibilityConverter},
+												 ConverterParameter={x:Static viewModel:SubtitleModifierChoices.Multiple}}" />
 					</StackPanel>
 
 					<!--  Encoding  -->
@@ -747,8 +749,8 @@
 								VerticalContentAlignment="Center"
 								IsEnabled="{Binding PostEncodeActionEnabled}"
 								Text="{Binding PostEncodeExecutable,
-								               Mode=TwoWay,
-								               UpdateSourceTrigger=PropertyChanged}" />
+											   Mode=TwoWay,
+											   UpdateSourceTrigger=PropertyChanged}" />
 
 							<Button
 								Grid.Column="2"
@@ -774,8 +776,8 @@
 								VerticalContentAlignment="Center"
 								IsEnabled="{Binding PostEncodeActionEnabled}"
 								Text="{Binding PostEncodeArguments,
-								               Mode=TwoWay,
-								               UpdateSourceTrigger=PropertyChanged}" />
+											   Mode=TwoWay,
+											   UpdateSourceTrigger=PropertyChanged}" />
 						</Grid>
 					</StackPanel>
 				</StackPanel>
