Overhauled sizing UI: * Added padding support * Streamlined UI: No longer can specify both Width and Max Width, simply a checkbox to allow Anamorphic support, Custom Anamorphic gone in favor of Manual sizing * Moved rotation to Sizing tab * Renamed tabs Picture -> Sizing, Video -> Video Encoding * Removed Pixel Aspect Ratio information in input/output preview boxes if PAR is 1:1. * Sections within Sizing tab now wrap dynamically, supporting more window sizes.

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -334,19 +334,19 @@
 				Name="tabControl"
 				Margin="0 73 0 0"
 				SelectedIndex="{Binding SelectedTabIndex}">
-				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Picture}">
-					<view:PicturePanel DataContext="{Binding PicturePanelViewModel}" />
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Sizing}">
+					<view:SizingPanel DataContext="{Binding SizingPanelViewModel}" />
 				</TabItem>
 				<TabItem Header="{x:Static res:EncodingRes.TabHeader_VideoFilters}">
 					<view:VideoFiltersPanel DataContext="{Binding VideoFiltersPanelViewModel}" />
 				</TabItem>
-				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Video}">
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_VideoEncoding}">
 					<view:VideoPanel DataContext="{Binding VideoPanelViewModel}" />
 				</TabItem>
 				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Advanced}" Visibility="{Binding VideoPanelViewModel.UseAdvancedTab, Converter={StaticResource VisibilityConverter}}">
 					<view:AdvancedPanel DataContext="{Binding AdvancedPanelViewModel}" />
 				</TabItem>
-				<TabItem Header="{x:Static res:EncodingRes.TabHeader_Audio}">
+				<TabItem Header="{x:Static res:EncodingRes.TabHeader_AudioEncoding}">
 					<view:AudioPanel DataContext="{Binding AudioPanelViewModel}" />
 				</TabItem>
 			</TabControl>
