--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -353,7 +353,17 @@
 						<Image
 							Width="16"
 							Height="16"
-							Source="/Icons/folder.png" />
+							Source="/Icons/dvd_folder.png" />
+					</MenuItem.Icon>
+				</MenuItem>
+				<MenuItem
+					Command="{Binding OpenFolder}"
+					Header="{x:Static res:MainRes.EnqueueFolderOfVideoFiles}">
+					<MenuItem.Icon>
+						<Image
+							Width="16"
+							Height="16"
+							Source="/Icons/video_files_folder.png" />
 					</MenuItem.Icon>
 				</MenuItem>
 				<MenuItem
