Preparation for removal of x86 version and stable release
* Changed to use JSON file for latest version information
* Updated build script to allow building Debug flavor, outputting to Test folder instead
* Updated app to enable auto-updates in Debug mode, looking in special Test folder
* Updated uninstaller to suppress the prompt to delete user data when run in silent mode (and automatically preserve user data)
* Updated x64 installer to remove old x86 app silently
* Added warning to users of 32-bit OS that updates will no longer work.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -708,9 +708,9 @@
 						<TextBlock
 							Style="{StaticResource ConfigSectionHeader}"
 							Text="{x:Static res:OptionsRes.UpdateStatusSection}"
-							Visibility="{Binding UpdatesEnabled,
+							Visibility="{Binding ShowUpdateStatus,
 							                     Converter={StaticResource VisibilityConverter}}" />
-						<StackPanel Style="{StaticResource ConfigSectionStack}" Visibility="{Binding UpdatesEnabled, Converter={StaticResource VisibilityConverter}}">
+						<StackPanel Style="{StaticResource ConfigSectionStack}" Visibility="{Binding ShowUpdateStatus, Converter={StaticResource VisibilityConverter}}">
 							<TextBlock Margin="0 0 0 3" Text="{Binding UpdateStatus}" />
 							<ProgressBar
 								Grid.Column="1"
