--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -642,23 +642,10 @@
 						</StackPanel>
 
 						<!--  Video  -->
-						<TextBlock
+						<!--<TextBlock
 							Style="{StaticResource ConfigSectionHeader}"
 							Text="{x:Static res:OptionsRes.VideoSection}"
-							TextWrapping="Wrap" />
-						<StackPanel Style="{StaticResource ConfigSectionStack}">
-							<CheckBox
-								Margin="0 0 0 0"
-								HorizontalAlignment="Left"
-								VerticalAlignment="Center"
-								Content="{x:Static res:OptionsRes.DxvaDecodingCheckBox}"
-								IsChecked="{Binding DxvaDecoding}"
-								Style="{StaticResource LongToolTipHolder}">
-								<CheckBox.ToolTip>
-									<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:OptionsRes.DxvaDecodingToolTip}" />
-								</CheckBox.ToolTip>
-							</CheckBox>
-						</StackPanel>
+							TextWrapping="Wrap" />-->
 
 						<!--  DVD reading  -->
 						<TextBlock
